--- a/fish-store/package.json
+++ b/fish-store/package.json
@@ -33,7 +33,11 @@
     "vite": "^2.8.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@headlessui/react": "^1.5.0",
+    "@mui/icons-material": "^5.5.0",
+    "@mui/material": "^5.5.0",
     "@shopify/hydrogen": "^0.12.0",
     "body-parser": "^1.19.1",
     "compression": "^1.7.4",
